[gd_scene load_steps=3 format=3 uid="uid://boj8wsv76jqlm"]

[ext_resource type="Script" path="res://BrainVisualizer/UI/GenericElements/Vectors/Vector3iField.gd" id="1_hv1wd"]
[ext_resource type="Script" path="res://BrainVisualizer/UI/GenericElements/TextBoxes/IntInput.gd" id="3_vm86m"]

[node name="Vector3fField" type="BoxContainer"]
offset_right = 227.0
offset_bottom = 23.0
theme_type_variation = &"BoxContainer_far"
script = ExtResource("1_hv1wd")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelX" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_type_variation = &"TooltipLabel"
text = "X"

[node name="IntX" type="LineEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
script = ExtResource("3_vm86m")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelY" type="Label" parent="HBoxContainer2"]
layout_mode = 2
theme_type_variation = &"TooltipLabel"
text = "Y"

[node name="IntY" type="LineEdit" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
script = ExtResource("3_vm86m")

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelZ" type="Label" parent="HBoxContainer3"]
layout_mode = 2
theme_type_variation = &"TooltipLabel"
text = "Z
"

[node name="IntZ" type="LineEdit" parent="HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
script = ExtResource("3_vm86m")
